--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,6 +1,7 @@
-.main {
+/* .main {
   min-height: 100vh;
-  background: url("../../assets/Ocean.svg");
+  overflow-x: hidden;
+  background: url("../../assets/Ocean.svg") no-repeat;
   background-size: cover;
 }
 
@@ -9,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 32px;
+  align-items: center;
 }
 .navbar_logo {
   margin-left: 5%;
@@ -57,6 +59,9 @@
   align-items: center;
   height: 80vh;
   margin-left: 5%;
+  margin-right: 5%;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .main_descryption {
   width: 730px;
@@ -73,6 +78,7 @@
   font-weight: 700;
   font-size: 48px;
   line-height: 64px;
+  font-family: var(--font-play);
 }
 .main_company_info {
   padding-top: 16px;
@@ -86,15 +92,22 @@
   gap: 24px;
 }
 .main_menu div {
-  background: #2c343e;
+  background: #ffffff;
   border-radius: 6px;
   font-family: var(--font-mont);
-  width: 353px;
+  width: 20vw;
   height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 30px;
+  color: #2c343e;
+}
+.main_comment_info {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
 }
 .main_comment {
   background: rgba(44, 52, 62, 0.59);
@@ -103,4 +116,329 @@
   border-radius: 6px;
   width: 405px;
   height: 200px;
+  font-family: var(--font-mont);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+.main_comment_text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 16px 16px;
+  gap: 8px;
+}
+.main_comment_text p {
+  text-align: center;
+  max-width: 340px;
+}
+.main_comment_response {
+  display: flex;
+  align-items: center;
+  font-family: var(--font-mont);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
+  justify-content: center;
+  gap: 12px;
+}
+.main_comment_response p {
+  max-width: 180px;
+}
+@media screen and (max-width: 1260px) {
+  .main_descryption {
+    width: 530px;
+  }
+  .main_content {
+    font-size: 42px;
+    line-height: 48px;
+  }
+  .main_company_info {
+    padding-top: 16px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+}
+@media screen and (max-width: 1050px) {
+  .main_comment_info {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .main_menu div {
+    width: 35vw;
+  }
+}
+@media screen and (max-width: 920px) {
+  .main_comment_info {
+    margin-top: 50px;
+    justify-content: center;
+  }
+
+  .main__info {
+    margin-top: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .main_descryption {
+    width: 430px;
+  }
+  .main_menu div {
+    width: 45vw;
+  }
+  .main_content {
+    font-size: 36px;
+    line-height: 42px;
+  }
+  .main_company_info {
+    padding-top: 16px;
+    font-size: 10px;
+    line-height: 15px;
+  }
+  .main_comment {
+    height: 190px;
+    width: 100%;
+    min-width: 200px;
+  }
+  .main_comment_text {
+    padding: 20px 8px 8px 8px;
+  }
+  .main_comment_text img {
+    width: 10px;
+  }
+  .main_comment_response img {
+    width: 38px;
+  }
+
+}
+@media screen and (max-width: 400px) {
+  .navbar_menu div {
+    padding: 8px 10px 0px 10px;
+    font-size: 12px;
+  }
+  .main_content {
+    font-size: 24px;
+    line-height: 36px;
+
+}
+  .main_menu div {
+    width: 60vw;
+  }
+  .navbar_menu {
+    margin-right: 5vw;
+  }
+  .main_comment_response img {
+    width: 20%;
+  }
+  .main_comment_response {
+    gap: 6px;
+  }
+}
+ */
+
+/* ---------------------------------------- КОД ВЄТАЛЯ ----------------------------------- */
+
+.app__main {
+  min-height: 100vh;
+  background: url("../../assets/Ocean.svg") no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px 120px 20px;
+}
+
+.app__main-wrapper {
+  max-width: 1680px;
+  width: 100%;
+}
+
+.app__main-navbar {
+  display: flex;
+  justify-content: space-between;
+  height: 125px;
+  align-items: center;
+}
+
+.app__main-navbar h1 {
+  font-family: var(--font-mont);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+}
+
+.app__main-navbar_links {
+  display: flex;
+  gap: 8px;
+}
+
+.app__main-navbar_links-item {
+  font-family: var(--font-mont);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 6px;
+  height: 36px;
+  width: 96px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.app__main-navbar_links-item:last-child {
+  background: #ffffff;
+  color: #2c343e;
+}
+
+.app__main-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  gap: 30px;
+}
+
+.app__main-content_text {
+  max-width: 730px;
+}
+
+.app__main-content_text p {
+  font-family: var(--font-mont);
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+  color: #ffffff;
+}
+
+.app__main-content_text h1 {
+  font-family: var(--font-mont);
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.app__main-content_text h3 {
+  font-family: var(--font-mont);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.app__main-content_text-button {
+  font-family: var(--font-mont);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  background: #ffffff;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 48px;
+  max-width: 353px;
+  width: 100%;
+}
+
+.app__main-content_review {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.review-card {
+  background: rgba(44, 52, 62, 0.59);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  border-radius: 6px;
+  height: 200px;
+  max-width: 405px;
+  min-width: 405px;
+  width: 100%;
+  padding: 8px 8px 12px 8px;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.review-card_text {
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  height: 125px;
+  align-items: center;
+}
+
+.review-card_text p {
+  font-family: var(--font-mont);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  padding: 0 10px;
+}
+
+.review-card_user {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 12px;
+  gap: 12px;
+}
+
+.review-card_user h6 {
+  font-family: var(--font-mont);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
+  max-width: 200px;
+}
+
+@media screen and (max-width: 1280px) {
+  .app__main-content_text h1 {
+    font-size: 36px;
+    line-height: 52px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .app__main-content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .app__main-content_review {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .review-card {
+    min-width: 250px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .app__main-navbar_links {
+    flex-direction: column;
+  }
+  .app__main-content_text h1 {
+    font-size: 28px;
+    line-height: 46px;
+  }
 }
