--- a/src/components/Problem/Problem.css
+++ b/src/components/Problem/Problem.css
@@ -8,6 +8,7 @@
     width: 100%;
     padding-bottom: 8px;
     border-bottom: solid 1px rgba(255, 255, 255, 0.3);
+    overflow: hidden;
 }
 .problem__category{
     padding-top: 24px;
