--- a/src/components/ProblemInput/ProblemInput.css
+++ b/src/components/ProblemInput/ProblemInput.css
@@ -1,128 +1,144 @@
-.problemInput input{
-    width: 100%;
-    background: rgba(44, 52, 62, 0.5);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.084), 0px 2px 3px rgba(0, 0, 0, 0.168);
-    border-radius: 6px;
-    font-family: var(--font-mont);
-    font-style: normal;
-    color: #FFFFFF;
-    padding-left: 8px;
+.problemInput input {
+  outline: none;
+  width: 100%;
+  background: rgba(44, 52, 62, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.084), 0px 2px 3px rgba(0, 0, 0, 0.168);
+  border-radius: 6px;
+  font-family: var(--font-mont);
+  font-style: normal;
+  color: #ffffff;
+  padding-left: 8px;
 }
-.problemInput__border{
-    margin-top: 9px;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.3);
+
+.problemInput__border {
+  margin-top: 9px;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.3);
 }
-.problemInput textarea{
-    width: 100%;
-    background: rgba(44, 52, 62, 0.5);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.084), 0 2px 3px rgba(0, 0, 0, 0.168);
-    border-radius: 6px;
-    font-family: var(--font-mont);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    padding: 8px;
-    color: white;
-    resize: none;
+.problemInput textarea {
+  outline: none;
+  width: 100%;
+  background: rgba(44, 52, 62, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.084), 0 2px 3px rgba(0, 0, 0, 0.168);
+  border-radius: 6px;
+  font-family: var(--font-mont);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  padding: 8px;
+  color: white;
+  resize: none;
 }
-.first{
-    height: 152px;
+
+.problemInput input:focus,
+.problemInput textarea:focus {
+  outline: 1px solid rgba(255, 255, 255, 1);
 }
-.second{
-    max-height: 90px;
+.first {
+  height: 152px;
+}
+.second {
+  margin-top: 8px;
+  max-height: 90px;
 }
 .problemInput__container-content_totaldrop-dropdown {
-    position: relative;
-    max-width: 200px;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 16px;
-    margin-top: 16px;
+  position: relative;
+  max-width: 200px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
+  margin-top: 16px;
 }
 
 .problemInput__container-content_totaldrop-dropdown button {
-    all: unset;
-    cursor: pointer;
-    border-radius: 6px;
-    width: 200px;
-    height: 35px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: var(--font-mont);
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
-    color: #ffffff;
-    padding: 0 10px;
+  all: unset;
+  cursor: pointer;
+  border-radius: 6px;
+  width: 200px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: var(--font-mont);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: #ffffff;
+  padding: 0 10px;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content {
-    display: none;
+  display: none;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content.open {
-    margin-top: 40px;
-    background: rgba(44, 52, 62, 1);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 6px;
-    max-width: 200px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: absolute;
-    z-index: 5;
+  margin-top: 40px;
+  background: rgba(44, 52, 62, 1);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  max-width: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  position: absolute;
+  z-index: 5;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content-wrapper {
-    display: flex;
-    padding: 8px 10px;
-    cursor: pointer;
+  display: flex;
+  padding: 8px 10px;
+  cursor: pointer;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content-wrapper:first-child {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content-wrapper:last-child {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content-wrapper p {
-    font-family: var(--font-mont);
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    color: #ffffff;
-    padding-left: 8px;
+  font-family: var(--font-mont);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  padding-left: 8px;
 }
 
 .problemInput__container-content_totaldrop-dropdown_content-wrapper:hover {
-    background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.3);
 }
-.input__title{
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 65px;
-    height: 65px;
+.input__title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 45px;
+  height: 65px;
 }
-.input__contacts{
-    margin-top: 12px;
-    height: 30px;
+.input__contacts {
+  margin-top: 12px;
+  height: 30px;
 }
-.problemInput__contacts{
-    margin-top: 12px;
-    font-family: var(--font-mont);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 20px;
-    color: white;
+.problemInput__contacts {
+  margin-top: 12px;
+  font-family: var(--font-mont);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  color: white;
+}
+@media screen and (max-width: 450px) {
+  .input__title {
+    font-size: 20px;
+    line-height: 35px;
+    height: 45px;
+  }
 }
