--- a/src/pages/Psycho/Problems/Problems.css
+++ b/src/pages/Psycho/Problems/Problems.css
@@ -1,10 +1,13 @@
 .problems {
   display: flex;
-  background: url("../../../assets/Ocean.svg") no-repeat;
-  background-size: cover;
   min-height: 100vh;
   padding: 100px 0 0 0;
   justify-content: center;
+}
+
+.loading-screen {
+  align-items: center;
+  display: flex;
 }
 
 .problems__container {
@@ -15,7 +18,6 @@
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   width: 100%;
   align-items: center;
-  justify-content: center;
   min-height: calc(100vh - 100px);
 }
 
@@ -140,6 +142,24 @@
   margin-bottom: 100px;
 }
 
+.none {
+  display: flex;
+  margin-bottom: auto;
+  height: 40vh;
+  flex-direction: column;
+  gap: 30px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.none h4 {
+  font-family: var(--font-mont);
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+}
 @media screen and (max-width: 410px) {
   .problems__container-content h1 {
     font-size: 38px;
