--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -3,16 +3,29 @@
   border-radius: 6px;
   display: flex;
   max-width: 1023px;
-
-  padding: 25px 40px 25px 25px;
+  width: 70%;
+  padding: 16px;
   align-items: center;
   justify-content: center;
-  top: 32px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   position: fixed;
-  top: 32px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 999;
+  /*  top: 32px; */
+  top: -100px;
+  animation: slideIn 0.5s ease forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    top: -100px; /* Початкова позиція алерту зверху */
+    opacity: 0;
+  }
+  100% {
+    top: 32px; /* Кінцева позиція алерту внизу */
+    opacity: 1;
+  }
 }
 
 .alert p {
@@ -20,7 +33,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  text-align: center;
+  text-align: start;
   color: #ffffff;
 }
 
