--- a/src/pages/Public/Main/Main.css
+++ b/src/pages/Public/Main/Main.css
@@ -9,7 +9,11 @@
   gap: 30px;
   height: 80vh;
 }
-
+.app__main-content_text{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+}
 .app__main-content_text h1 {
   font-family: var(--font-mont);
   font-weight: 700;
@@ -17,8 +21,21 @@
   line-height: 64px;
   color: #ffffff;
   margin-bottom: 16px;
+  text-align: center;
+  max-width: 870px;
 }
-
+.app__main-content_text h2 {
+  font-family: var(--font-mont);
+  font-style: normal;
+  font-weight: 6
+  00;
+  font-size: 40px;
+  line-height: 49px;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 18px;
+  max-width: 870px;
+}
 .app__main-content_text-button {
   font-family: var(--font-mont);
   font-weight: 500;
@@ -38,5 +55,12 @@
   .app__main-content_text h1 {
     font-size: 36px;
     line-height: 52px;
+  }
+  .app__main-content_text h2{
+    font-size: 28px;
+    line-height: 36px;
+  }
+  .app__main-content_text-button{
+    max-width: 250px;
   }
 }
