--- a/src/components/CardPsycho/CardPsycho.css
+++ b/src/components/CardPsycho/CardPsycho.css
@@ -12,7 +12,6 @@
   cursor: pointer;
 }
 .cardpsycho span {
-
   background: rgba(255, 255, 255, 0.3);
   width: 100%;
   height: 1px;
@@ -56,6 +55,11 @@
 .cardpsycho-description{
   display: flex;
   flex-direction: column;
+}
+
+.cardpsycho-rating{
+  display: flex;
+  margin-top: 12px;
 }
 @media screen and (max-width: 410px) {
   .cardpsycho {
