--- a/src/components/ProblemInput/ProblemInput.css
+++ b/src/components/ProblemInput/ProblemInput.css
@@ -45,7 +45,7 @@
 }
 .problemInput__container-content_totaldrop-dropdown {
   position: relative;
-  max-width: 200px;
+  max-width: 100%;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -57,11 +57,11 @@
   all: unset;
   cursor: pointer;
   border-radius: 6px;
-  width: 200px;
+  width: 100%;
   height: 35px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap:12px;
   font-family: var(--font-mont);
   font-weight: 600;
   font-size: 24px;
@@ -79,7 +79,7 @@
   background: rgba(44, 52, 62, 1);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 6px;
-  max-width: 200px;
+  max-width: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
