--- a/src/pages/Psycho/ProblemID/ProblemID.css
+++ b/src/pages/Psycho/ProblemID/ProblemID.css
@@ -68,3 +68,11 @@
   margin-top: 8px;
   }
 }
+.accept{
+  border: 1px solid #00FF38;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.084), 0px 2px 3px rgba(0, 0, 0, 0.168);
+}
+.sended{
+  border: 1px solid #FFD600;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.084), 0px 2px 3px rgba(0, 0, 0, 0.168);
+}
