--- a/src/pages/Psycho/Problems/Problems.css
+++ b/src/pages/Psycho/Problems/Problems.css
@@ -67,7 +67,7 @@
 
 .problems__container-content_totaldrop-dropdown {
   position: relative;
-  max-width: 150px;
+  max-width: 250px;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -79,7 +79,7 @@
   background: rgba(44, 52, 62, 0.7);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 6px;
-  width: 150px;
+  width: 250px;
   height: 35px;
   display: flex;
   align-items: center;
@@ -101,7 +101,7 @@
   background: rgba(44, 52, 62, 1);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 6px;
-  max-width: 150px;
+  max-width: 250px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -111,7 +111,7 @@
 }
 
 .problems__container-content_totaldrop-dropdown_content-wrapper {
-  padding: 8px 10px;
+  padding: 6px 10px;
   cursor: pointer;
 }
 
@@ -148,6 +148,15 @@
   margin-bottom: 100px;
 }
 
+.problems__container-journal_cards {
+  justify-content: center;
+  align-items: center;
+  grid-gap: 16px;
+  display: table;
+  max-width: 1588px;
+  width: 100%;
+  margin-bottom: 100px;
+}
 .none {
   display: flex;
   margin-bottom: auto;
@@ -180,5 +189,10 @@
   .problems__container-content h1 {
     font-size: 38px;
     line-height: 49px;
+  }
+  .problems__container-content_totaldrop{
+    flex-direction: column;
+    gap:12px;
+    align-items: flex-start;
   }
 }
