--- a/src/pages/Patient/MyJournal/MyJournal.css
+++ b/src/pages/Patient/MyJournal/MyJournal.css
@@ -1,7 +1,6 @@
 .journal {
     display: flex;
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
     justify-content: center;
 }
 
@@ -16,7 +15,7 @@
     min-height: 80vh;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .journal__container-content{
@@ -32,22 +31,7 @@
     line-height: 59px;
     color: #ffffff;
 }
-@media screen and (max-width: 1024px) {
-    .journal {
-        flex-direction: column;
-    }
 
-    .journal__container {
-        width: 80vw;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 250px;
-    }
-
-    .journal__container-content {
-
-    }
-}
 .journal__container-content__add{
     display: flex;
     align-items: center;
@@ -175,4 +159,28 @@
 
 .journal__container-content_totaldrop-dropdown_content-wrapper:hover {
     background: rgba(255, 255, 255, 0.3);
+}
+@media screen and (max-width: 1024px) {
+    .journal {
+        flex-direction: column;
+    }
+
+    .journal__container {
+        width: 80vw;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 100px;
+    }
+
+    .journal__container-content {
+
+    }
+    .containers__psycho{
+        position: relative;
+        display: flex;
+        margin-top: -50px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 100px;
+    }
 }
